feat: cut over to vue single page application
